--- a/_sass/simple-texture-blog.scss
+++ b/_sass/simple-texture-blog.scss
@@ -10,6 +10,9 @@ html {
     background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F9F9F9;
 }
 
+p.a {
+  text-align: left;
+}
 body {
     font-family: $fonts-body;
     font-size: 18px;
